fix(ui): Correct warehouse page layout for mobile view
- Fixed global layout issues on the warehouse page for mobile view.
- Ensured that changing screen sizes no longer causes layout breaks.

--- a/src/components/WarehouseItemRow/WarehouseItemRow.scss
+++ b/src/components/WarehouseItemRow/WarehouseItemRow.scss
@@ -48,7 +48,7 @@ label{
 }
 
 .warehouse-actions {
-  margin-block: var.$spacing-btn;
+  margin-block: var.$spacing-small;
 
   &__wrapper {
     display: flex;
